@@ -1,3 +1,7 @@
+shmuel 2025-05-07 21:44:43+03:00 - build 875
+
+1. LuaFAR: make utf8.format() handle integers beyond 32 bit size.
+
 johnd0e 2025-04-30 23:54:19+02:00 - build 874
 
 1. LuaFAR: fix FarColor / UnderlineColor handling.
